--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -1,3 +1,5 @@
+<!--班级群组界面-->
+<!--@anthor an-->
 <!doctype html>
 <html>
 
@@ -36,9 +38,10 @@
 	</head>
 
 	<body>
+		<!--标题栏-->
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 id="title" class="mui-title">1002班</h1>
+			<h1 id="title" class="mui-title">班级名称</h1>
 		</header>
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
@@ -58,245 +61,31 @@
 					</div>
 				</div>
 				<div id="item1" class="mui-control-content mui-active">
-					<!--这里放置真实显示的DOM内容-->
+					<!--学生群组内容-->
 					<ul id="gride1" class="mui-table-view mui-grid-view mui-grid-9"></ul>
+					<!--退群按钮-->
 					<button id="quit-group1" type="button" class="mui-btn mui-btn-danger group-button">退群</button>
 
 				</div>
 				<div id="item2" class="mui-control-content">
-					<!--这里放置真实显示的DOM内容-->
+					<!--老师群组内容-->
 					<ul id="gride2" class="mui-table-view mui-grid-view mui-grid-9"></ul>
+					<!--退群按钮-->
 					<button id="quit-group2" type="button" class="mui-btn mui-btn-danger group-button">退群</button>
 
 				</div>
 				<div id="item3" class="mui-control-content">
-					<!--这里放置真实显示的DOM内容-->
+					<!--家长群组内容-->
 					<ul id="gride3" class="mui-table-view mui-grid-view mui-grid-9"></ul>
+					<!--退群按钮-->
 					<button id="quit-group3" type="button" class="mui-btn mui-btn-danger group-button">退群</button>
-
 				</div>
-
 			</div>
-
 		</div>
-
 	</body>
 	<script src="../../js/mui.min.js"></script>
-	<script type="text/javascript">
-		mui.init()
-	</script>
-	<script src="../../js/utils/grideControl.js"></script>
 	<script src="../../js/publicProtocol.js"></script>
 	<script type="text/javascript" src="../../js/utils/events.js"></script>
-	<script>
-		events.preload('group-pInfo.html', 200);
-		var groupId = null;
-		var groupName = null;
-		mui('.mui-scroll-wrapper').scroll({
-			indicators: true, //是否显示滚动条
-		})
-		var isMaster=false;
-		var allcount = 0;
-		var groupRoles = []; //本人在群里的身份信息
-		var gride1 = document.getElementById('gride1');
-		var gride2 = document.getElementById('gride2');
-		var gride3 = document.getElementById('gride3');
-		mui.plusReady(function() {
-				window.addEventListener('postGroupInfo', function(e) {
-					console.log(JSON.stringify(e.detail.data));
-					if(e.detail.data) {
-						groupId = e.detail.data.classId;
-						groupName = e.detail.data.className;
-						document.getElementById('title').innerText = groupName;
-						groupRoles = [];
-						allcount = 0;
-						setGride();
-						/**
-						 *获取个人在群信息 
-						 */
-						getUserInGroup(-1, function(data) {
-							groupRoles = data;
-							console.log('获取本人在群的所有信息：' + JSON.stringify(data));
-						});
-					}
-				})
-
-				mui('#gride1').on('tap', '.mui-table-view-cell', function() {
-					//				events.fireToPageWithData('group-pInfo.html','postPInfo',data);
-				})
-				mui('#gride2').on('tap', '.mui-table-view-cell', function() {
-					events.fireToPageWithData('group-pInfo.html', 'postPInfo', data);
-				})
-				mui('#gride3').on('tap', '.mui-table-view-cell', function() {
-					events.fireToPageWithData('group-pInfo.html', 'postPInfo', data);
-				})
-				events.addTap('quit-group1', function() {
-					getUserInGroup(3, showChoices);
-				})
-				events.addTap('quit-group2', function() {
-					getUserInGroup(2, showChoices);
-				})
-				events.addTap('quit-group3', function() {
-					getUserInGroup(0, showChoices);
-				})
-			})
-			/**
-			 * 获取用户在群组中的信息
-			 * @param {Object} mstype
-			 * @param {Object} callback
-			 */
-		var getUserInGroup = function(mstype, callback) {
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-				postDataPro_PostGuI({
-					vvl: groupId,
-					vtp: mstype
-				}, wd, function(data) {
-					wd.close()
-					console.log('用户在群的身份 ' + JSON.stringify(data));
-					if(data.RspCode == '0000') {
-						//					quitGroup(data.RspData[0].gutid, mstype);
-						callback(data.RspData);
-					} else {
-						mui.toast('您未以当前身份加入该群！');
-					}
-				})
-			}
-			/**
-			 * 根据角色数量 显示不同选择
-			 * @param {Object} data
-			 */
-		var showChoices = function(data) {
-			console.log('showChoices'+JSON.stringify(groupRoles))
-				if(groupRoles.length > 1) {
-					plus.nativeUI.actionSheet({
-						title: "请选择退群方式",
-						cancel: "取消",
-						buttons: [{
-							title: "退出当前群组"
-						}, {
-							title: "退出所有身份(群主除外)"
-						}]
-					}, function(e) {
-						console.log("User pressed: " + e.index);
-						if(e.index > 0) {
-							if(e.index == 1) {
-								quitGroup(data[0],quitSquad);
-							} else {
-								quitGroupAll();
-							}
-						}
-
-					});
-				} else {
-					quitGroupAll();
-				}
-			}
-			/**
-			 * 退出群
-			 */
-		var quitGroupAll = function() {
-				groupRoles.forEach(function(groupRole, i) {
-					if(groupRole.mstype==1){
-						isMaster=true;
-						allcount++;
-					}else{
-						quitGroup(groupRole, allCallback);
-					}
-					
-				})
-			}
-			/**
-			 * 退出群
-			 */
-		var allCallback = function(roleInfo) {
-				allcount++;
-				if(allcount > 0 && allcount == groupRoles.length) {
-					events.fireToPageNone('../quan/tab-zone.html', 'quitGroup');
-					groupRoles = [];
-					allcount = 0;
-					if(!isMaster){
-						var curpage = plus.webview.currentWebview();
-						curpage.opener().close();
-						curpage.close();
-					}else{
-						setGride();
-					}
-				}
-			}
-			/**
-			 * 退出小组 
-			 * @param {Object} roleInfo
-			 */
-		var quitSquad = function(roleInfo) {
-			console.log('退群的groupInfo:'+Array.isArray(groupRoles)+ JSON.stringify(roleInfo)+groupRoles.indexOf(roleInfo));
-				groupRoles.forEach(function(groupRole,i){
-					if(groupRole.gutid==roleInfo.gutid){
-						groupRoles.splice(i,1);
-						return false;
-					}
-				})
-//				groupRoles.splice(groupRoles.indexOf(roleInfo), 1);
-				console.log('退组后的身份信息：'+JSON.stringify(groupRoles));
-				getGroupInfo(roleInfo.mstype);
-				events.fireToPageNone('../quan/tab-zone.html', 'quitGroup');
-			}
-			/**
-			 * 退出群组
-			 * @param {Object} roleInfo
-			 * @param {Object} callback
-			 */
-		var quitGroup = function(roleInfo, callback) {
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-			postDataPro_PostGuD({
-				vvl: roleInfo.gutid
-			}, wd, function(data) {
-				console.log('退群返回值：' + JSON.stringify(data));
-				wd.close();
-				if(data.RspCode == '0000') {
-					mui.toast('退群成功');
-					callback(roleInfo);
-				} else {
-					mui.toast(data.RspTxt);
-				}
-			})
-		}
-		var setGride = function() {
-			console.log('传送的groupId:' + groupId)
-			getGroupInfo(3);
-			getGroupInfo(2);
-			getGroupInfo(0);
-		}
-		var getGroupInfo = function(vvl) {
-			var item;
-			switch(vvl) {
-				case 0:
-					item = gride3;
-					break;
-				case 2:
-					item = gride2;
-					break;
-				case 3:
-					item = gride1;
-					break;
-				default:
-					break;
-			}
-			events.clearChild(item);
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING)
-			postDataPro_PostGusers({
-				top: -1,
-				vvl: groupId,
-				vvl1: vvl
-			}, wd, function(data) {
-				wd.close();
-				console.log('获取群组成员：' + vvl + JSON.stringify(data))
-				if(data.RspCode == '0000' && data.RspData != null) {
-					createGride(item, data.RspData);
-				} else {
-					mui.toast(data.RspTxt);
-				}
-			});
-		}
-	</script>
+	<script type="text/javascript" src="../../js/quan/class-group.js"></script>
 
 </html>
