--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -24,11 +24,15 @@
 				</div>
 				<div class="mui-input-row">
 					<label>新密码</label>
-
+					<input type="password" id="password0"  placeholder="输入新密码">
 				</div>
 				<div class="mui-input-row">
 					<label>新密码</label>
-					<input type="password" id="password1" placeholder="重新输入新密码 ">
+					<input type="password" id="password1" placeholder="重新输入新密码">
+				</div>
+				<div class="mui-input-row" id="unickName0">
+					<label>昵称</label>
+					<input type="text" id="unickName" placeholder="请输入昵称">
 				</div>
 			</form>
 			<div class="mui-content-padded">
@@ -55,6 +59,7 @@
 		<script src="../../js/utils/sortSign.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/signHmacSHA1.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/libs/jquery.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
@@ -64,6 +69,8 @@
 				var oldPassword = document.getElementById('old-password');
 				var navTitle = document.getElementById('navTitle');
 				var back = document.getElementById('back');
+				var phoneNumber = document.getElementById("phoneNumber"); //原密码
+				var unickName = document.getElementById("unickName"); //昵称
 				//修改密码
 				window.addEventListener('changePasswords', function() {
 					oldPassword.style.display = 'block';
@@ -76,6 +83,7 @@
 					back.style.display = 'inline-block';
 					tempFlag = 2;
 					navTitle.innerHTML = '设置密码';
+					unickName.style.display = 'block';
 					document.getElementById('cancelBtn').style.display = 'none';
 				});
 				//上级传值如果是1，是修改密码
@@ -93,6 +101,19 @@
 				events.addTap('modifypassword', function() {
 					var newpw0 = document.getElementById("password0").value;
 					var newpw1 = document.getElementById("password1").value;
+					var phoneNumber = document.getElementById("phoneNumber");
+					var unickName = document.getElementById("unickName");
+					if(tempFlag == 1) { //修改密码
+						if(phoneNumber.value.length == 0) {
+							mui.toast('请输入原密码');
+							return;
+						}
+					} else { //设置密码
+						if(unickName.value.length == 0) {
+							mui.toast('请输入昵称');
+							return;
+						}
+					}
 					if(!newpw0) {
 						mui.toast('请输入新密码');
 						return;
@@ -139,40 +160,53 @@
 							//不需要加密的数据
 							var comData = {
 								uuid: plus.device.uuid,
-								shaketype: 'repw',
+								shaketype: 'repw', //注册(reg),登录(login),修改密码(repw)
 								appid: plus.runtime.appid,
 								token: personalToken
-//								vtp:'',//np(新建密码),rp(修改密码)
-//								vvl://
+									//								vtp:'',//np(新建密码),rp(修改密码)
+									//								vvl://
 							};
 							//发送网络请求，data为网络返回值
 							if(tempFlag == 0 || tempFlag == 2) {
-								comData.vtp = 'np';
-							} else { //修改密码，需要原先密码
-								comData.vtp = 'rp';
-								enData.vvl = document.getElementById("old-password").value;
-							}
-								postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
-									//成功，关闭等待框
+								comData.vtp = 'np'; //np(新建密码),rp(修改密码)
+								enData.vvl = '';
+								//6.用户修改各项用户信息
+								var comData9 = {
+									vtp: 'unick', //uimg(头像),utxt(签名),unick(昵)称,usex(性别),uemail(邮件),uphone(手机绑定)uphoneq(手机解绑),uemailq(邮件解绑),uname(账号,只能修改一次,且只能字母开头,字母与数字,定了就不能修改)
+									vvl: unickName.value //对应的值
+								};
+								// 等待的对话框
+								postDataPro_PostReUinf(comData9, wd, function(data) {
 									wd.close();
-									console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-									if(data.RspCode != 0000) {
-										mui.toast(data.RspTxt);
-										return;
-									} else {
-										if(tempFlag == 0) {
-											window.myStorage.getItem(window.storageKeyName.PERSONALINFO).ispw = '1';
-											mui.toast('修改密码成功');
-											events.openNewWindowWithData('../index/index.html', '');
-										} else { //在设置里面退出时，设置密码
-											//修改自动登录值
-											window.myStorage.setItem(window.storageKeyName.PERSONALINFO,null);
-											//跳转到登录界面
-											events.openNewWindowWithData('../../html/register/login.html', '');
-										}
-									}
+									console.log('设置昵称success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+									if(data.RspCode == 0) {
+										
+									} 
 								});
-							
+							} else { //修改密码，需要原先密码
+								comData.vtp = 'rp'; //np(新建密码),rp(修改密码)
+								enData.vvl = document.getElementById("old-password").value; //旧密码
+							}
+							postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
+								//成功，关闭等待框
+								wd.close();
+								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+								if(data.RspCode != 0000) {
+									mui.toast(data.RspTxt);
+									return;
+								} else {
+									if(tempFlag == 0) {
+										window.myStorage.getItem(window.storageKeyName.PERSONALINFO).ispw = '1';
+										mui.toast('修改密码成功');
+										events.openNewWindowWithData('../index/index.html', '');
+									} else { //在设置里面退出时，设置密码
+										//修改自动登录值
+										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
+										//跳转到登录界面
+										events.openNewWindowWithData('../../html/register/login.html', '');
+									}
+								}
+							});
 
 						} else {
 							mui.toast(data.RspTxt);
