修改设置密码后的全局变量

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -71,11 +71,13 @@
 				var back = document.getElementById('back');
 				var phoneNumber = document.getElementById("phoneNumber"); //原密码
 				var unickName = document.getElementById("unickName"); //昵称
+				var unickName0 = document.getElementById("unickName0"); //昵称
 				//修改密码
 				window.addEventListener('changePasswords', function() {
 					oldPassword.style.display = 'block';
 					document.getElementById('cancelBtn').style.display = 'none';
 					back.style.display = 'inline-block';
+					unickName0.style.display = 'none';
 					tempFlag = 1;
 				});
 				//设置密码
@@ -84,6 +86,7 @@
 					tempFlag = 2;
 					navTitle.innerHTML = '设置密码';
 					unickName.style.display = 'block';
+					oldPassword.style.display = 'none';
 					document.getElementById('cancelBtn').style.display = 'none';
 				});
 				//上级传值如果是1，是修改密码
@@ -180,7 +183,9 @@
 									wd.close();
 									console.log('设置昵称success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 									if(data.RspCode == 0) {
-										
+										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+										tempInfo.unick = unickName.value;
+										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 									} 
 								});
 							} else { //修改密码，需要原先密码
@@ -190,13 +195,15 @@
 							postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
 								//成功，关闭等待框
 								wd.close();
-								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+								console.log('修改密码success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 								if(data.RspCode != 0000) {
 									mui.toast(data.RspTxt);
 									return;
 								} else {
 									if(tempFlag == 0) {
-										window.myStorage.getItem(window.storageKeyName.PERSONALINFO).ispw = '1';
+										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+										tempInfo.ispw = '1';
+										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 										mui.toast('修改密码成功');
 										events.openNewWindowWithData('../index/index.html', '');
 									} else { //在设置里面退出时，设置密码
