--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -272,7 +272,6 @@
 						tempArray.push(tempModel0.PublisherId);
 						//合并数组,点赞的人
 						tempArray = tempArray.concat(tempModel0.LikeUsers);
-						tempArray = arrayDupRemoval(tempArray)
 						tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
 						//循环当前model中的回复数组
 						for(var item1 in tempModel0.Comments) {
@@ -281,6 +280,14 @@
 							//将回复中的id塞到数组
 							tempArray.push(tempModel1.UserId);
 							tempArray.push(tempModel1.ReplyId);
+							//
+							for(var item2 in tempModel1.Replys) {
+								//回复中的model
+								var tempModel2 = tempModel1.Replys[item2];
+								//将回复中的id塞到数组
+								tempArray.push(tempModel2.UserId);
+								tempArray.push(tempModel2.ReplyId);
+							}
 						}
 					}
 					//给数组去重
@@ -313,12 +320,14 @@
 											tempModel0.LikeUsers.splice(item2, 1, tempModel);
 										}
 									}
-
+console.log('tempModel===='+JSON.stringify(tempModel));
+console.log('tempModel0===='+JSON.stringify(tempModel0));
 									//对比id是否一致
-									if(tempModel0.utid == tempModel.UserId) {
+									if(tempModel0.PublisherId == tempModel.utid) {
 										//合并
 										tempModel0 = $.extend(tempModel0, tempModel);
 									}
+									console.log('9999999999===='+JSON.stringify(tempModel0));
 									//循环当前model中的回复数组
 									for(var item1 in tempModel0.Comments) {
 										//回复中的model
@@ -331,6 +340,20 @@
 										if(tempModel.utid == tempModel1.ReplyId) {
 											//添加参数
 											tempModel1.ReplyIdName = tempModel.unick;
+										}
+										//
+										for(var item2 in tempModel1.Replys) {
+											//回复中的model
+											var tempModel2 = tempModel1.Replys[item2];
+											//对比id是否一致
+											if(tempModel.utid == tempModel2.UserId) {
+												//添加参数
+												tempModel2.UserIdName = tempModel.unick;
+											}
+											if(tempModel.utid == tempModel2.ReplyId) {
+												//添加参数
+												tempModel2.ReplyIdName = tempModel.unick;
+											}
 										}
 									}
 								}
@@ -355,7 +378,7 @@
 							tempPage = 1;
 							zonepArray = tempRspData;
 							//留言总条数
-
+							console.log(JSON.stringify(zonepArray))
 							table.innerHTML = '';
 							for(var i = 0; i < zonepArray.length; i++) {
 								id = i;
@@ -563,18 +586,22 @@
 			//1.评论[commenter,content]，评论者，评论内容
 			//2.回复[replyer，commenter，replyContent]回复者，评论者，回复的内容
 			var commentList = [];
+
 			for(var i = 0; i < tempModel.Comments.length; i++) {
 
 				var tempComment = tempModel.Comments[i];
-				if(tempComment.ReplyId == 0) {
-					var tempArr = [tempComment.UserIdName, tempComment.CommentContent];
-					commentList.push(tempArr);
-				} else {
-					var replyer1 = [tempComment.UserIdName, tempComment.ReplyIdName, tempComment.CommentContent];
-					commentList.push(replyer1);
+				commentList.push(tempComment);
+				if(tempComment.Replys.length != 0) {
+					var replys = tempComment.Replys
+					for(var j = 0; j < replys.length; j++) {
+						var replyModel = replys[j];
+						commentList.push(replyModel);
+					}
+
 				}
 
 			}
+			console.log(JSON.stringify(commentList))
 
 			InteractionList.push(introduce);
 			InteractionList.push(viewCount);
@@ -600,17 +627,14 @@
 			} else {
 				if(tempIndex.indexOf('-') >= 0) {
 					var indexArr = tempIndex.split('-');
-					var cellIndex = indexArr[0];
-					var commentIndex = indexArr[1];
-					var upperId = zonepArray[cellIndex].Comments[commentIndex].UpperId;
-					if(upperId==0){
-						upperId = zonepArray[cellIndex].Comments[commentIndex].TabId;
-					}
+					var id = indexArr[0];
+					var upperId = indexArr[1];
+					var replyUserId = indexArr[2];
 					var comData = {
 						userId: personalUTID, //用户ID
 						upperId: upperId, //上级评论ID
-						replyUserId: zonepArray[cellIndex].Comments[commentIndex].UserId, //回复ID
-						userSpaceId: zonepArray[cellIndex].TabId, //用户空间ID
+						replyUserId: replyUserId, //回复ID
+						userSpaceId: zonepArray[id].TabId, //用户空间ID
 						commentContent: inputComment.value //回复内容
 					};
 					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
@@ -619,14 +643,14 @@
 						console.log('添加空间评论回复_addUserSpaceCommentReply' + JSON.stringify(data));
 						mui('.mui-popover').popover('hide');
 
-//						var replyComment = document.getElementById('replyComment' + tempIndex);
-//						var nextReplyComment = document.createElement('div');
-//						var html2 = '<font class="common-font-family-Regular dynamic-comment-name">' + replyName + '</font>';
-//						var html3 = '<font class="common-font-family-Regular">回复</font>';
-//						var html4 = '<font class="common-font-family-Regular dynamic-comment-name">' + zonepArray[cellIndex].Comments[commentIndex].UserIdName + '</font>';
-//						var html5 = '<font class="common-font-family-Regular">:' + inputComment.value + '</font>'
-//						nextReplyComment.innerHTML = html2 + html3 + html4 + html5;
-//						replyComment.parentNode.appendChild(nextReplyComment);
+						//						var replyComment = document.getElementById('replyComment' + tempIndex);
+						//						var nextReplyComment = document.createElement('div');
+						//						var html2 = '<font class="common-font-family-Regular dynamic-comment-name">' + replyName + '</font>';
+						//						var html3 = '<font class="common-font-family-Regular">回复</font>';
+						//						var html4 = '<font class="common-font-family-Regular dynamic-comment-name">' + zonepArray[cellIndex].Comments[commentIndex].UserIdName + '</font>';
+						//						var html5 = '<font class="common-font-family-Regular">:' + inputComment.value + '</font>'
+						//						nextReplyComment.innerHTML = html2 + html3 + html4 + html5;
+						//						replyComment.parentNode.appendChild(nextReplyComment);
 						//						inputComment.value = '';
 
 					})
@@ -641,18 +665,18 @@
 						wd.close();
 						console.log('添加空间评论_addUserSpaceComment' + JSON.stringify(data));
 						mui('.mui-popover').popover('hide');
-//						var commentArr = zonepArray[tempIndex].Comments;
-//						if(commentArr.length==0){
-//							
-//						}
-//						var addComment = document.getElementById('replyComment' + zonepArray[tempIndex].Comments);
-//						var nextComment = document.createElement('div');
-//						var html2 = '<font class="common-font-family-Regular dynamic-comment-name ">' + replyName + '</font>';
-//						var html3 = '<font class="common-font-family-Regular">：' + inputComment.value + '</font>'
-//						nextComment.innerHTML = html2 + html3;
-//						addComment.parentNode.appendChild(nextComment);
+						//						var commentArr = zonepArray[tempIndex].Comments;
+						//						if(commentArr.length==0){
+						//							
+						//						}
+						//						var addComment = document.getElementById('replyComment' + zonepArray[tempIndex].Comments);
+						//						var nextComment = document.createElement('div');
+						//						var html2 = '<font class="common-font-family-Regular dynamic-comment-name ">' + replyName + '</font>';
+						//						var html3 = '<font class="common-font-family-Regular">：' + inputComment.value + '</font>'
+						//						nextComment.innerHTML = html2 + html3;
+						//						addComment.parentNode.appendChild(nextComment);
 						inputComment.value = '';
-						
+
 					})
 				}
 
