群成员界面和群成员资料界面
更改群成员退群按钮显示状态；
点击成员资料空间，跳转至个人空间

--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -64,21 +64,21 @@
 					<!--学生群组内容-->
 					<ul id="gride1" class="mui-table-view mui-grid-view mui-grid-9"></ul>
 					<!--退群按钮-->
-					<button id="quit-group1" type="button" class="mui-btn mui-btn-danger group-button">退群</button>
+					<button id="quit-group1" type="button" class="mui-btn mui-btn-danger group-button">退出</button>
 
 				</div>
 				<div id="item2" class="mui-control-content">
 					<!--老师群组内容-->
 					<ul id="gride2" class="mui-table-view mui-grid-view mui-grid-9"></ul>
 					<!--退群按钮-->
-					<button id="quit-group2" type="button" class="mui-btn mui-btn-danger group-button">退群</button>
+					<button id="quit-group2" type="button" class="mui-btn mui-btn-danger group-button">退出</button>
 
 				</div>
 				<div id="item3" class="mui-control-content">
 					<!--家长群组内容-->
 					<ul id="gride3" class="mui-table-view mui-grid-view mui-grid-9"></ul>
 					<!--退群按钮-->
-					<button id="quit-group3" type="button" class="mui-btn mui-btn-danger group-button">退群</button>
+					<button id="quit-group3" type="button" class="mui-btn mui-btn-danger group-button">退出</button>
 				</div>
 			</div>
 		</div>
