传值到群资料界面

--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -24,7 +24,7 @@
 		    	</div>
 		    </div>
 		    <ul class="mui-table-view">
-		            <li class="mui-table-view-cell">
+		            <li id="person-gData" class="mui-table-view-cell">
 		                <a class="mui-navigate-right">
 		                    資料信息
 		                </a>
