改变向两个页面的传值方式
1.个人空间
2.群个人资料

--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -46,6 +46,7 @@
 				<li class="mui-table-view-cell" position='3'>
 					<a class="mui-navigate-right">
 						<span class="mui-icon iconfont icon-newmessage"></span> 新消息
+						<span class="mui-badge mui-badge-red">数字</span>
 					</a>
 				</li>
 
