--- a/JiaoBaoYun-hb/html/mine/qun_data.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data.html
@@ -302,10 +302,10 @@
 					// 等待的对话框
 					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					postDataPro_PostGList(getQunData, wd, function(data) {
-						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						console.log('9_PostGList_获取用户群.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
 							//获取到数据
-							console.log('获取群数据成功');
+
 							document.getElementById("noqun").style.display = 'none';
 							document.getElementById("lineblue").style.display = 'inline';
 							document.body.querySelector('#slider').style.display = 'inline';
@@ -325,7 +325,7 @@
 								});
 								//不相同的群和身份
 								if(!same) {
-									console.log('data.RspData:群id:' + item.gid + '|群名：' + item.gname + '|管理角色：' + item.mstype);
+									console.log('不同群和身份：群id:' + item.gid + '|群名：' + item.gname + '|管理角色：' + item.mstype);
 									var qun = {
 										gid: item.gid, //群ID
 										gname: item.gname, //群名
@@ -342,6 +342,9 @@
 									mui.extend(qun, hasGetMember); //合并两个对象
 									qunList.push(qun);
 									addQun(qun);
+								} else {
+									console.log('相同的群和身份:群id:' + item.gid + '|群名：' + item.gname + '|管理角色：' + item.mstype);
+
 								}
 							});
 							//getMember(qunList[0], type); //获取群的正常用户
@@ -451,15 +454,16 @@
 						//16.通过群ID获取群对象资料
 						//需要参数
 						var getMemData = {
+							vtp: '0', //获取类型,0普通资料获取,1邀请排除(主老师用)
 							top: '-1', //选择条数,-1取全部
-							vvl: qun.gid, //群ID，查询的值
-							vvl1: vvl1, //类型,0家长,1管理员,2老师,3学生,-1全部
+							vvl: qun.gid.toString(), //群ID，查询的值
+							vvl1: vvl1.toString(), //类型,0家长,1管理员,2老师,3学生,-1全部
 						};
 						//console.log('getMemData:' + JSON.stringify(getMemData));
 						// 等待的对话框
 						var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 						postDataPro_PostGUInf(getMemData, wd, function(data) {
-							console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+							console.log('16_PostGUInf_通过群ID获取群对象资料.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 							//参数名	名称	参数类型	长度	是否加密	备注
 							//gid	群ID	int		否
 							//stuid	资料id	int		否
@@ -467,8 +471,35 @@
 							//stuimg	资料头像	string		否	头像地址
 							//mstype	资料类型	int		否	0家长,1管理员,2老师,3学生
 							if(data.RspCode == 0) {
-								mui.each(data.RspData, function(index, item) {
-									console.log('getMemData:' + JSON.stringify(item));
+								var tempData = data.RspData;
+								if(vvl1 == '2') { //资料类型是老师
+									mui.each(data.RspData, function(index1, item1) {
+										var dataID = item1.stuid; //资料ID
+										console.log('dataID:' + dataID);
+										//22.通过用户资料ID获取用户各项资料
+										//所需参数
+										var comData2 = {
+											vvl: dataID //查询的用户资料ID
+										};
+										// 等待的对话框
+										var wd2 = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+										postDataPro_PostUuinf(comData2, wd2, function(data) {
+											console.log('22_PostUuinf_获取用户各项资料.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+											if(data.RspCode == 0) {
+												document.getElementById("stuimg_" + dataID).src = updateHeadImg(data.RspData[0].uimg, 2);
+												console.log("stuimg_" + dataID + '|' + updateHeadImg(data.RspData[0].uimg), 2);
+											} else {
+												if(data.RspCode != 9) {
+													mui.toast(data.RspTxt);
+												}
+											}
+											wd2.close();
+										});
+									});
+								}
+
+								mui.each(tempData, function(index, item) {
+									console.log('群对象资料:' + JSON.stringify(item));
 									var qunBot = document.getElementById("bot_" + type2 + '_' + qun.gid).querySelector('.mui-row');
 									var table = document.getElementById("addData_" + type2 + '_' + qun.gid);
 									addData(qunBot, item, table);
@@ -521,15 +552,9 @@
 						//成员,
 						var html2 = '<div class="keep-box-shadow-border keep-member" data-stuid="' + member.stuid + '" data-gid="' + member.gid + '" data-stuname="' + member.stuname + '" data-stuimg="' + member.stuimg + '">';
 						//头像
-						var html3 = '';
-						if(member.stuimg != null && member.stuimg != '') {
-							html3 = '<img src="' + member.stuimg + '" />';
-						} else {
-							html3 = '<img src="../../image/utils/default_personalimage.png" />';
-						}
+						var html3 = '<img id="stuimg_' + member.stuid + '" src="' + updateHeadImg(member.stuimg, 2) + '" />';
 						//名称
 						var html4 = '<p class="mui-ellipsis">' + member.stuname + '</p></div>';
-
 						li.innerHTML = html1 + html2 + html3 + html4;
 						qunBot.insertBefore(li, table);
 					}
