挪地方,我的界面显示新消息条数

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -50,7 +50,7 @@
 	<script>
 		mui.init();
 		mui.plusReady(function() {
-			slideNavigation.add('../mine.html', 200)
+			slideNavigation.add('mine.html', 200)
 		})
 	</script>
 
