--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -128,11 +128,11 @@
 							break;
 							//设置
 						case 6:
-							events.openNewWindow('mine/setting.html')
+							events.openNewWindow('/html/mine/setting.html')
 							break;
 							//关于
 						case 7:
-							events.openNewWindow('mine/group-info.html')
+							events.openNewWindow('/html/mine/group-info.html')
 							break;
 
 						default:
@@ -144,17 +144,12 @@
 			window.addEventListener('infoChanged', function() {
 					getInfo()
 				})
-				/**
-				 * @param {Object} info
-				 * "utid":"3",
-				 * "token":"Pc7Grc0gP7SacraGNpYpdDMrI9w=",
-				 * "uid":"18906444490","uname":
-				 * "testA0000055B6AE73",
-				 * "unick":"",
-				 * "usex":"0",
-				 * "utxt":"",
-				 * "uimg":""}
-				 */
+			window.addEventListener('newsChanged',function(){
+					getNewsAmount();
+			})
+			/**
+			 * 获取个人信息
+			 */
 			function getInfo() {
 				info = myStorage.getItem(storageKeyName.PERSONALINFO);
 				console.log('我的界面获取的个人信息：' + JSON.stringify(info))
@@ -174,6 +169,9 @@
 				}
 				getNewsAmount();
 			}
+			/**
+			 * 获取新消息数量
+			 */
 			var getNewsAmount=function(){
 				var wd=plus.nativeUI.showWaiting(storageKeyName.WAITING);
 				postDataPro_PostGrInvC({},wd,function(data){
@@ -182,11 +180,18 @@
 					var num=document.getElementById('news-amount');
 					if(data.RspCode=='0000'){
 						num.style.display='inline';
-						num.innerText=data.RspData[0].pc;
+						num.innerText=setAmount(data.RspData);
 					}else{
 						num.style.display='none';
 					}
 				});
+			}
+			var setAmount=function(data){
+				var amount=0;
+				data.forEach(function(cell){
+					amount+=cell.pc;
+				})
+				return amount;
 			}
 			//关闭
 			function closeMenu() {
