申請加入群后的聯動效果

--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -57,6 +57,7 @@
 
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<!--本页面的js-->
 		<script src="../../js/mine/apply-group.js"></script>
