--- a/JiaoBaoYun-hb/html/mine/apply-record.html
+++ b/JiaoBaoYun-hb/html/mine/apply-record.html
@@ -30,12 +30,18 @@
 		<script src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript">
 			mui.init()
+			mui('.mui-scroll-wrapper').scroll({
+				indicators: true, //是否显示滚动条
+			})
 			mui.plusReady(function() {
 				events.preload('apply-group.html');
 				events.addTap('btn-apply', function() {
 					events.showPreloadPage('apply-group.html');
 				})
 				getListData();
+				window.addEventListener('applied',function(){
+					getListData();
+				})
 			})
 			var getListData = function() {
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
