我的跳轉路徑的更改

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -97,7 +97,7 @@
 				//点击title跳转到账号信息界面
 				events.addTap('title', function() {
 					closeMenu()
-					events.openNewWindow('mine/account-info.html')
+					events.openNewWindow('/html/mine/account-info.html')
 				})
 
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
