--- a/JiaoBaoYun-hb/html/mine/apply-record.html
+++ b/JiaoBaoYun-hb/html/mine/apply-record.html
@@ -1,3 +1,5 @@
+<!--申請界面記錄-->
+<!--@anthor an-->
 <!doctype html>
 <html>
 
@@ -43,6 +45,9 @@
 					getListData();
 				})
 			})
+			/**
+			 * 獲取申請數據
+			 */
 			var getListData = function() {
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 				postDataPro_PostMJoin({}, wd, function(data) {
@@ -55,6 +60,10 @@
 					}
 				})
 			}
+			/**
+			 * 放置申請數據
+			 * @param {Object} data 獲取的數據
+			 */
 			var setListData = function(data) {
 				var list = document.getElementById('list-container');
 				data.forEach(function(cell, i, data) {
@@ -66,7 +75,7 @@
 			}
 
 			/**
-			 * 
+			 * inner數據
 			 * @param {Object} cell	
 			 *		gutid:'',//	邀请记录ID	int		否
 			 *		gid:'',//	群ID	int		否	
