--- a/JiaoBaoYun-hb/html/mine/group-info.html
+++ b/JiaoBaoYun-hb/html/mine/group-info.html
@@ -1,4 +1,5 @@
 <!--
+	@群信息界面
 	@athor an
 	@time 11.16
 -->
@@ -172,7 +173,6 @@
 						}
 						console.log('传递的群信息：'+JSON.stringify(data))
 						events.openNewWindowWithData('edit-groupInfo.html', data);
-						
 						data = null;
 					});
 			}
