--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -86,6 +86,7 @@
 	<script src="../../js/mui.min.js"></script>
 	<script src="../../js/publicProtocol.js"></script>
 	<script type="text/javascript" src="../../js/utils/events.js"></script>
+	<!--本頁專用JS-->
 	<script type="text/javascript" src="../../js/quan/class-group.js"></script>
 
 </html>
